k8s/dashboards/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  tls:
  - hosts:
    - jensneuse.de
    secretName: istio-ingress-certs
  rules:
  - host: grafana.jensneuse.de
    http:
      paths:
      - path:
        backend:
          serviceName: grafana
          servicePort: 3000
