k8s/dashboards/promviz-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promviz-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  tls:
  - hosts:
    - jensneuse.de
    secretName: istio-ingress-certs
  rules:
  - host: promviz.jensneuse.de
    http:
      paths:
      - path:
        backend:
          serviceName: promviz-promviz
          servicePort: 9091
